# pyceres

./: .dockerignore  .gitignore  Dockerfile.manylinux  HISTORY.md  LICENSE  MANIFEST.in  README.md  build-windows.ps1  compile.py  pyproject.toml  requirements.txt  setup.py  steps taken.txt
.github/workflows/: build-manylinux.yml  build-windows.yml
dplus/: Residual.h  dynamic_adaptive_numeric_diff_cost_function.h
dplus_ceres/: py_iter_callback_wrapper.h
eigen/: .gitignore
pyceres/: call_cost_function.pyx  ceres_static.pxd  iteration_callback.pyx  iteration_callback_func.pyx  py_cost_func_wrapper.h  py_iter_callback_wrapper.h  pyceres.pyx
tests/: basic_test.py
